# response-rank

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-lock.txt  run_full_mini.sh  run_linters  run_tests
.devcontainer/: Dockerfile  devcontainer.json
conf/llm/: config.yaml
conf/llm/experiment/: _base.yaml  bt.yaml  bt_acc2.yaml  bt_acc8.yaml  bt_agree.yaml  bt_clip0p5.yaml  bt_clip2p0.yaml  bt_ep2.yaml  bt_ep4.yaml  bt_lr1em5.yaml  bt_lr2em5.yaml  bt_meanpref.yaml  bt_warmup0p01.yaml  bt_warmup0p1.yaml  bt_wd0p001.yaml  rr.yaml  rr_agree.yaml  rr_agree_bt.yaml  rr_agree_ep2.yaml  rr_agree_ep4.yaml  rr_agree_filter25.yaml  rr_agree_filter50.yaml  rr_agree_filter75.yaml  rr_agree_filter95.yaml  rr_agree_gradacc2.yaml  rr_agree_gradacc8.yaml  rr_agree_gradclip0p5.yaml  rr_agree_gradclip2p0.yaml  rr_agree_lr1em5.yaml  rr_agree_lr2em5.yaml  rr_agree_partialshuffle100.yaml  rr_agree_partialshuffle25.yaml  rr_agree_partialshuffle50.yaml  rr_agree_partialshuffle75.yaml  rr_agree_slight25.yaml  rr_agree_slight75.yaml  rr_agree_spread2.yaml  rr_agree_spread2_partialshuffle100.yaml  (+24 more)
conf/synthetic/: config.yaml  generate_dataset_config.yaml  run_learner_config.yaml
results/llm/: data.pkl  meta.json  registry.yaml
results/rl_control/: highway_rew_model_data.csv  highway_runs.csv  mujoco_rew_model_data.csv  mujoco_runs.csv
results/synthetic/: deterministic_all.json  deterministic_all_no_variability.json  drift_diffusion.json  drift_diffusion_no_variability.json  stochastic.json  stochastic_no_variability.json
tests/: test_annotation_aggregator.py  test_evaluation.py  test_fitting.py  test_llm_rt_losses.py  test_losses.py  test_multipref.py  test_partitioner.py  test_passthrough_reward_data_collator.py  test_results_loader.py  test_rtranking_anchored.py  test_stratification.py  test_synthetic_data.py  test_util.py
(+122 files in other folders)
