[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "responserank"
version = "0.1.0"
description = "ResponseRank: Data-Efficient Reward Modeling through Preference Strength Learning"
authors = [
    # For anonymous submission
    {name = ""}
]
readme = "README.md"
requires-python = ">=3.10"
# Omitted for anonymous submission
# license = {file = "LICENSE"}
dependencies = [
    # Pinned for reproducibility
    "torch==2.7.0",
    "numpy==2.2.6",
    "scipy==1.15.3",
    "pandas==2.2.3",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
    "hydra-core==1.3.2",
    "scikit-learn==1.6.1",
    "psutil==7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "ipykernel",
    "ipywidgets",
    "jupytext",
    "ruff",
    "pyright",
]
llm = [
    "transformers",
    "trl==0.17.0",
    "datasets",
    "wandb",
]

[tool.setuptools]
packages = ["responserank", "responserank.synthetic", "responserank.llm"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src"
]

[tool.flake8]
max-line-length = 88

[tool.ruff.lint]
extend-select = ["I"]  # Organize imports

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.pyright]
include = [
    "src"
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
responserank = { path = ".", editable = true }

[tool.pixi.dependencies]
# Constrain Python <3.14; torch 2.7.0 wheels only available for 3.9-3.13
python = ">=3.10,<3.14"
git = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
llm = { features = ["llm"], solve-group = "default" }

[tool.pixi.tasks]
